[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts-C/Disciplinas.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Backgrounds/Disciplinas/Background Disciplina.png" type="Texture" id=2]
[ext_resource path="res://Imagens/Grid 12.png" type="Texture" id=3]
[ext_resource path="res://Fontes/FontGodot/Titulo Cena.tres" type="DynamicFont" id=4]
[ext_resource path="res://Cenas/MenuSup2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Imagens/Objetos/Disciplinas/borda azul.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Objetos/Disciplinas/borda rosa01.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Objetos/Disciplinas/borda rosa.png" type="Texture" id=8]
[ext_resource path="res://Scripts-C/Disciplina.gd" type="Script" id=9]
[ext_resource path="res://Fontes/FontGodot/Titulo Disciplina.tres" type="DynamicFont" id=10]
[ext_resource path="res://Imagens/Botoes/seguinte.png" type="Texture" id=11]
[ext_resource path="res://Imagens/Botoes/seguinte_c.png" type="Texture" id=12]
[ext_resource path="res://Imagens/Botoes/seguinte_h.png" type="Texture" id=13]
[ext_resource path="res://Imagens/Backgrounds/Disciplinas/card disciplinas.png" type="Texture" id=14]
[ext_resource path="res://Fontes/FontGodot/Info Disciplina 1.tres" type="DynamicFont" id=15]
[ext_resource path="res://Fontes/FontGodot/Info Disciplina 2.tres" type="DynamicFont" id=16]
[ext_resource path="res://Imagens/Botoes/nãofechar.png" type="Texture" id=17]
[ext_resource path="res://Imagens/Botoes/nãofechar_h.png" type="Texture" id=18]
[ext_resource path="res://Imagens/Botoes/nãofechar_c.png" type="Texture" id=19]

[node name="Disciplinas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Grid" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Semestre" type="Label" parent="."]
margin_left = 757.0
margin_top = 240.0
margin_right = 1163.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.878431, 0.321569, 0.388235, 1 )
text = "x Semestre"

[node name="Opcoes" parent="." instance=ExtResource( 5 )]

[node name="Disciplina1" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 344.0
margin_top = 400.0
margin_right = 953.0
margin_bottom = 503.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Disciplina1"]
margin_left = 16.0
margin_top = 8.0
margin_right = 593.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Modelo"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Disciplina2" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 971.0
margin_top = 400.0
margin_right = 1580.0
margin_bottom = 503.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Disciplina2"]
margin_left = 16.0
margin_top = 8.0
margin_right = 593.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Disciplina3" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 344.0
margin_top = 551.0
margin_right = 953.0
margin_bottom = 654.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Disciplina3"]
margin_left = 16.0
margin_top = 8.0
margin_right = 593.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Disciplina4" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 971.0
margin_top = 551.0
margin_right = 1580.0
margin_bottom = 654.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Disciplina4"]
margin_left = 16.0
margin_top = 8.0
margin_right = 593.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Disciplina5" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 344.0
margin_top = 702.0
margin_right = 953.0
margin_bottom = 805.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Disciplina5"]
margin_left = 16.0
margin_top = 8.0
margin_right = 593.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Disciplina6" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 971.0
margin_top = 702.0
margin_right = 1580.0
margin_bottom = 805.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Disciplina6"]
margin_left = 16.0
margin_top = 8.0
margin_right = 593.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Seguinte" type="TextureButton" parent="."]
visible = false
margin_left = 1756.0
margin_top = 476.0
margin_right = 2009.0
margin_bottom = 954.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="Anterior" type="TextureButton" parent="."]
margin_left = 164.0
margin_top = 476.0
margin_right = 417.0
margin_bottom = 954.0
rect_scale = Vector2( -0.4, 0.4 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="Popup" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.333333, 0.333333, 0.333333, 0.556863 )

[node name="Button" type="TextureButton" parent="Popup/ColorRect"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Card" type="TextureRect" parent="Popup"]
editor/display_folded = true
margin_left = 408.0
margin_top = 143.0
margin_right = 1512.0
margin_bottom = 937.0
texture = ExtResource( 14 )

[node name="Titulo" type="Label" parent="Popup/Card"]
margin_left = 64.0
margin_top = 48.0
margin_right = 1040.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true

[node name="InfoCodigo" type="Label" parent="Popup/Card"]
margin_left = 64.0
margin_top = 152.0
margin_right = 175.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Código:"

[node name="Codigo" type="Label" parent="Popup/Card"]
margin_left = 183.0
margin_top = 152.0
margin_right = 483.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="InfoEmenta" type="Label" parent="Popup/Card"]
margin_left = 64.0
margin_top = 203.0
margin_right = 188.0
margin_bottom = 246.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ementa:"

[node name="Ementa" type="Label" parent="Popup/Card"]
margin_left = 196.0
margin_top = 203.0
margin_right = 1038.0
margin_bottom = 453.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
clip_text = true

[node name="InfoPrereq" type="Label" parent="Popup/Card"]
margin_left = 64.0
margin_top = 461.0
margin_right = 294.0
margin_bottom = 504.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pré-Requisitos:"

[node name="Preres" type="Label" parent="Popup/Card"]
margin_left = 299.989
margin_top = 461.0
margin_right = 1012.99
margin_bottom = 555.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
clip_text = true

[node name="InfoCreditos" type="Label" parent="Popup/Card"]
margin_left = 64.0
margin_top = 563.0
margin_right = 197.0
margin_bottom = 606.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Créditos:"

[node name="Creditos" type="Label" parent="Popup/Card"]
margin_left = 205.0
margin_top = 563.0
margin_right = 405.0
margin_bottom = 606.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="InfoCarga" type="Label" parent="Popup/Card"]
margin_left = 64.0
margin_top = 614.0
margin_right = 282.0
margin_bottom = 657.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Carga Horária:"

[node name="Carga" type="Label" parent="Popup/Card"]
margin_left = 290.0
margin_top = 614.0
margin_right = 490.0
margin_bottom = 665.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Fechar" type="TextureButton" parent="Popup"]
margin_left = 810.0
margin_top = 841.0
margin_right = 1222.0
margin_bottom = 929.0
rect_scale = Vector2( 0.727, 0.727 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )

[connection signal="button_up" from="Disciplina1" to="." method="_on_Disciplina1_button_up"]
[connection signal="button_up" from="Disciplina2" to="." method="_on_Disciplina2_button_up"]
[connection signal="button_up" from="Disciplina3" to="." method="_on_Disciplina3_button_up"]
[connection signal="button_up" from="Disciplina4" to="." method="_on_Disciplina4_button_up"]
[connection signal="button_up" from="Disciplina5" to="." method="_on_Disciplina5_button_up"]
[connection signal="button_up" from="Disciplina6" to="." method="_on_Disciplina6_button_up"]
[connection signal="button_up" from="Seguinte" to="." method="_on_Seguinte_button_up"]
[connection signal="button_up" from="Anterior" to="." method="_on_Anterior_button_up"]
[connection signal="pressed" from="Popup/ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="button_up" from="Popup/Fechar" to="." method="_on_Fechar_button_up"]
